fix ff button wrap problem

--- a/webapp/src/view/dashboard-builder/style.scss
+++ b/webapp/src/view/dashboard-builder/style.scss
@@ -65,7 +65,7 @@
 }
 
 .cd-button {
-  padding: 10px 64px;
+  padding: 10px 50px;
   cursor: pointer;
   background-color: $rhz-button-bg-color;
   color: $rhz-font-color;
